subpage akupunktura created

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     >
                   </li>
                   <li class="navigation__listitem--drop">
-                    <a class="navigation__link--drop" href="#offer"
+                    <a class="navigation__link--drop" href="terapia-holistyczna.html"
                       >Terapia holistyczna</a
                     >
                   </li>
@@ -64,7 +64,7 @@
                     >
                   </li>
                   <li class="navigation__listitem--drop">
-                    <a class="navigation__link--drop" href="#offer"
+                    <a class="navigation__link--drop" href="warsztaty.html"
                       >Warsztaty</a
                     >
                   </li>
@@ -141,7 +141,7 @@
             </article>
           </a>
 
-          <a href="akupunktura.php">
+          <a href="terapia-holistyczna.html">
             <article class="offer-article">
               <header class="offer-article__header">
                 <img
@@ -161,7 +161,7 @@
             </article>
           </a>
 
-          <a href="akupunktura.php">
+          <a href="akupunktura.html">
             <article class="offer-article">
               <header class="offer-article__header">
                 <img
