--- a/warsztaty.html
+++ b/warsztaty.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Warsztaty w Domu Pod Wierzbą</title>
+    <title>Warsztaty - Dom Pod Wierzbą</title>
 
     <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
@@ -57,7 +57,7 @@
                     >
                   </li>
                   <li class="navigation__listitem--drop">
-                    <a class="navigation__link--drop" href="#offer"
+                    <a class="navigation__link--drop" href="terapia-holistyczna.html"
                       >Terapia holistyczna</a
                     >
                   </li>
@@ -67,7 +67,7 @@
                     >
                   </li>
                   <li class="navigation__listitem--drop">
-                    <a class="navigation__link--drop" href="#offer"
+                    <a class="navigation__link--drop" href="warsztaty.html"
                       >Warsztaty</a
                     >
                   </li>
@@ -128,7 +128,7 @@
               </p>
             </div>
 
-            <div class="emptyspace80"></div>
+            <div class="emptyspace40"></div>
             
 
             <div class="subpage-article__page subpage-article__page--style2 grid-4-col">
@@ -150,7 +150,7 @@
 
               <section class="subpage-card">
                 <img
-                  class="subpage-card__image--left"
+                  class="subpage-card__image"
                   src="images/warsztaty-oddechu-rani.jpg"
                   alt="Rani Spets Edgren Pranavisions Szkoła Oddechu"
                 />
@@ -166,7 +166,7 @@
 
               <section class="subpage-card">
                 <img
-                  class="subpage-card__image--left"
+                  class="subpage-card__image"
                   src="images/aga-rybak-lomi-lomi.jpg"
                   alt="Aga Rybak masaż Lomi Lomi"
                 />
@@ -180,7 +180,7 @@
 
               <section class="subpage-card">
                 <img
-                  class="subpage-card__image--left"
+                  class="subpage-card__image"
                   src="images/warsztaty-konie-Asia.jpg"
                   alt="Joanna Szypuła warsztaty z końmi trenerami"
                 />
@@ -196,7 +196,8 @@
               </section>
             </div>
 
-            
+            <div class="emptyspace20"></div>
+
             <div class="subpage-article__page subpage-article__page--style1">
             <p class="subpage-article__text">
               Napisz do nas, lub zadzwoń, jeśli chcesz zorganizować warsztat w
