subpage nordic-walking created

--- a/akupunktura.html
+++ b/akupunktura.html
@@ -104,92 +104,99 @@
             </p>
 
             <img
-              class="subpage-article__image--right"
+              class="subpage-article__image--right round5px"
               src="images/akupunktura-dom-pod-wierzba-pawel-dlonie.jpg"
               alt="Akupunktura jest bezpieczna"
             />
 
-            <p class="subpage-article__text">
-              Tak naprawdę nie ma znaczenia czy ktoś wierzy w akupunkturę czy
-              nie, ona i tak działa, co często widzimy w naszym gabinecie i o
-              czym świadczą opinie naszych pacjentów.
+          <p class="subpage-article__text">
+            Tak naprawdę nie ma znaczenia czy ktoś wierzy w akupunkturę czy
+            nie, ona i tak działa, co często widzimy w naszym gabinecie i o
+            czym świadczą opinie naszych pacjentów.
+          </p>
+
+          <p class="subpage-article__text">
+            Obecnie akupunktura obejmuje swoim zasięgiem niemal cały świat i
+            zyskuje sobie coraz więcej zwolenników zarówno wśród klientów jak
+            i lekarzy. Współczesna medycyna zachodnia, pomimo wybitnych
+            osiągnięć w dziedzinie diagnostyki i terapii, nadal jest bezradna
+            wobec wielu chorób – także takich, w których akupunktura jest w
+            stanie skutecznie pomóc.
+          </p>
+
+          <p class="subpage-article__text">
+            W wielu krajach np. w Niemczech czy Szwajcarii zabiegi akupunktury
+            są refundowane, ponieważ są tańsze od leczenia farmakologicznego,
+            a wykazują się co najmniej porównywalną skutecznością przy
+            mniejszej ilości działań niepożądanych.
+          </p>
+
+          <div class="emptyspace20"></div>
+
+          <img
+            class="subpage-article__image--left"
+            src="images/akupunktura-dom-pod-wierzba-chinskie-znaki.png"
+            alt="akupunktura po koreańsku"
+          />
+
+          <p class="subpage-article__text">
+            Choć ojczyzną akupunktury są Chiny, szybko rozpowszechniła się w
+            całym obszarze Dalekiego Wschodu. Metoda, którą my stosujemy,
+            wywodzi się z Korei i zwana jest „Than Dza, Piong Po, Piong Sa” co
+            znaczy <b>„Silna, Natychmiastowa, Piorunująca”</b>, bo często daje
+            właśnie takie efekty.
+          </p>
+
+          <div class="emptyspace40 off-on-mob"></div>
+          <div class="emptyspace40"></div>
+
+          <h2 class="subpage-article__heading2">
+            <i class="fas fa-caret-right">&nbsp;&nbsp;</i>Na czym polega i jak
+            działa akupunktura?
+          </h2>
+
+          <p class="subpage-article__text">
+            Zabieg akupunktury polega na nakłuwaniu cienkimi sterylnymi igłami
+            określonych punktów na ciele. Punkty te znajdują się wzdłuż 12
+            tzw. meridianów, czyli kanałów energetycznych zlokalizowanych w
+            ciele człowieka. Poprzez te kanały płynie energia witalna zwana
+            przez Chińczyków „Qi”. Zaburzenie przepływu energii w konkretnym
+            kanale prowadzi do patologii w organizmie.
+          </p>
+
+          <img
+            class="subpage-article__image--right round5px"
+            src="images/akupunktura-dom-pod-wierzba-meridiany-i-punkty.jpg"
+            alt="Model przebiegu meridianów w ludzkim ciele"
+          />
+
+          <p class="subpage-article__text">
+            Nakłuwanie punktów ma więc na celu przywrócenie prawidłowego
+            krążenia "Qi" i stymulowanie organów wewnętrznych człowieka.
+            Dzięki temu organizm odzyskuje równowagę i jest zdolny do powrotu
+            do zdrowia. Efekt terapeutyczny w leczeniu akupunkturą uzyskuje
+            się poprzez wykorzystanie odruchów układu nerwowego organizmu
+            klienta, co powoduje uruchomienie procesów samouzdrowienia.
+          </p>
+
+          <div class="emptyspace20 off-on-mob"></div>
+          <div class="emptyspace20"></div>
+
+          <p class="small-info">
+            <i>Artykuł pochodzi ze strony</i>
+            <a href="https://www.akademialoknath.pl/czym-jest-akupunktura/"
+              >www.akademialoknath.pl</a
+            >
+          </p>
+          <div class="emptyspace80 off-on-mob"></div>
+          <div class="emptyspace40"></div>
+
+          <div class="subpage-article__contact-card">
+            <p class="align-right">
+              Chcesz dowiedzieć się więcej o akupunkturze? Napisz lub zadzwoń:
             </p>
+           
 
-            <p class="subpage-article__text">
-              Obecnie akupunktura obejmuje swoim zasięgiem niemal cały świat i
-              zyskuje sobie coraz więcej zwolenników zarówno wśród klientów jak
-              i lekarzy. Współczesna medycyna zachodnia, pomimo wybitnych
-              osiągnięć w dziedzinie diagnostyki i terapii, nadal jest bezradna
-              wobec wielu chorób – także takich, w których akupunktura jest w
-              stanie skutecznie pomóc.
-            </p>
-
-            <p class="subpage-article__text">
-              W wielu krajach np. w Niemczech czy Szwajcarii zabiegi akupunktury
-              są refundowane, ponieważ są tańsze od leczenia farmakologicznego,
-              a wykazują się co najmniej porównywalną skutecznością przy
-              mniejszej ilości działań niepożądanych.
-            </p>
-
-            <div class="emptyspace20"></div>
-
-            <img
-              class="subpage-article__image--left"
-              src="images/akupunktura-dom-pod-wierzba-chinskie-znaki.png"
-              alt="akupunktura po koreańsku"
-            />
-
-            <p class="subpage-article__text">
-              Choć ojczyzną akupunktury są Chiny, szybko rozpowszechniła się w
-              całym obszarze Dalekiego Wschodu. Metoda, którą my stosujemy,
-              wywodzi się z Korei i zwana jest „Than Dza, Piong Po, Piong Sa” co
-              znaczy <b>„Silna, Natychmiastowa, Piorunująca”</b>, bo często daje
-              właśnie takie efekty.
-            </p>
-
-            <div class="emptyspace80"></div>
-
-            <h2 class="subpage-article__heading2">
-              Na czym polega i jak działa akupunktura?
-            </h2>
-
-            <p class="subpage-article__text">
-              Zabieg akupunktury polega na nakłuwaniu cienkimi sterylnymi igłami
-              określonych punktów na ciele. Punkty te znajdują się wzdłuż 12
-              tzw. meridianów, czyli kanałów energetycznych zlokalizowanych w
-              ciele człowieka. Poprzez te kanały płynie energia witalna zwana
-              przez Chińczyków „Qi”. Zaburzenie przepływu energii w konkretnym
-              kanale prowadzi do patologii w organizmie.
-            </p>
-
-            <img
-              class="subpage-article__image--right"
-              src="images/akupunktura-dom-pod-wierzba-meridiany-i-punkty.jpg"
-              alt="Model przebiegu meridianów w ludzkim ciele"
-            />
-
-            <p class="subpage-article__text">
-              Nakłuwanie punktów ma więc na celu przywrócenie prawidłowego
-              krążenia "Qi" i stymulowanie organów wewnętrznych człowieka.
-              Dzięki temu organizm odzyskuje równowagę i jest zdolny do powrotu
-              do zdrowia. Efekt terapeutyczny w leczeniu akupunkturą uzyskuje
-              się poprzez wykorzystanie odruchów układu nerwowego organizmu
-              klienta, co powoduje uruchomienie procesów samouzdrowienia.
-            </p>
-
-            <p class="small-info">
-              <i>Artykuł pochodzi ze strony</i>
-              <a href="https://www.akademialoknath.pl/czym-jest-akupunktura/"
-                >www.akademialoknath.pl</a
-              >
-            </p>
-            <div class="emptyspace80"></div>
-            <div class="emptyspace40"></div>
-
-            <div class="subpage-article__contact-card">
-              <p class="align-right">
-                Chcesz dowiedzieć się więcej o akupunkturze? Napisz lub zadzwoń:
-              </p>
               <p class="align-right">
                 <a
                   class="contact__link--alt"
