subpage terapia-holistyczna created

--- a/nordic-walking.html
+++ b/nordic-walking.html
@@ -108,7 +108,7 @@
               formy sportu. Joanna wspiera jego działania poprzez pracę
               psychoterapeutyczną.
             </p>
-            
+
             <p class="subpage-article__text">
               Nordic Walking został wymyślony dla narciarzy w Finlandii w ramach
               całorocznego treningu. To bezpieczny i łagodny sposób aktywności
@@ -118,7 +118,7 @@
             </p>
 
             <h2 class="subpage-article__heading2">
-              Co zyskujesz, dziękiNordic Walking?
+              Co zyskujesz, dzięki Nordic Walking?
             </h2>
 
             <h3 class="subpage-article__heading3">
@@ -135,7 +135,7 @@
 
             <img
               class="subpage-article__image--right round5px"
-              src="images/akupunktura-dom-pod-wierzba-meridiany-i-punkty.jpg"
+              src="images/nordic-walking-dom-pod-wierzba.jpg"
               alt="Model przebiegu meridianów w ludzkim ciele"
             />
 
@@ -199,18 +199,23 @@
             <div class="emptyspace20 off-on-mob"></div>
 
             <div class="subpage-article__contact-card">
-              <p>
-                Skontaktuj się z nami, jeśli chcesz:
-              </p>
+              <p>Skontaktuj się z nami, jeśli chcesz:</p>
 
               <ul>
                 <li>nauczyć się chodzić z kijami od profesjonalisty</li>
                 <li>dołączyć do grupy chodzącej z nami z kijami</li>
-                <li>uczestniczyć w treningu grupowym połączonym z wykładem o nordic walking i radzeniu sobie ze stresem</li>
-                <li>zorganizować wypoczynek z nordic walking dla swojej firmy lub organizacji</li>
-
+                <li>
+                  uczestniczyć w treningu grupowym połączonym z wykładem o
+                  nordic walking i radzeniu sobie ze stresem
+                </li>
+                <li>
+                  zorganizować wypoczynek z nordic walking dla swojej firmy lub
+                  organizacji
+                </li>
               </ul>
 
+              <div class="emptyspace20"></div>
+              <div class="emptyspace40 off-on-mob"></div>
               <p>
                 <a
                   class="contact__link--alt"
@@ -225,7 +230,7 @@
                   >+48 730 700 277</a
                 >
               </p>
-
+            </div>
           </article>
         </section>
       </section>
