subpage terapia-holistyczny develop; site-header mobile tweaks

--- a/terapia-holistyczna.html
+++ b/terapia-holistyczna.html
@@ -40,7 +40,7 @@
         </div>
 
         <button class="hamburger hamburger--js" aria-label="otwórz menu">
-          MENU
+          <i class="fas fa-bars"></i>
         </button>
         <nav class="navigation navigation--js">
           <ul id="main-menu-ul">
@@ -103,19 +103,25 @@
               podświadomości i energetyki.
             </p>
 
-            <p class="subpage-article__text">
+            <h2 class="subpage-article__heading2">
+             Joanna Szypuła POZYTYWNIE :-)
+            </h2>
+            <p class="subpage-article__text"><em>
               Certyfikowana konsultantka psychoterapii pozytywnej, certyfikowana
               terapeutka ustawień systemowych w polu archetypów (inaczej
               ustawienia hellingerowskie), certyfikowana coach i facylitatorka
               programów rozwojowych dla ludzi z udziałem koni trenerów, koniara
-              :)
+              :)</em>
             </p>
 
+            <div>
             <img
               class="subpage-article__image--right round5px one-third"
               src="images/Joanna-Szypula-terapeutka-holistyczna.jpg"
               alt="Joanna Szypuła"
             />
+            
+            </div>
 
             <p class="subpage-article__text">
               Pomagam spełniać marzenia i sięgać po lepszą jakość życia. Uczę,
@@ -134,12 +140,83 @@
               przemianę, pomaga uzdrawiać świat.
             </p>
 
-            
+            <p>
+              Sesje odbywają się w gabinecie we Wrocławiu lub Brzezinkach w Domu
+              pod Wierzbą, a także w ogrodzie, w lesie, czasami w stajni z
+              końmi. Możliwa jest też praca zdalna poprzez Zoom, Skype lub inne
+              komunikatory.
+            </p>
+
+            <h2 class="subpage-article__heading2">
+              <i class="fas fa-caret-right">&nbsp;&nbsp;</i>Pomagam...
+            </h2>
+
+            <ul>
+              <li>pokonać życiowe trudności</li>
+              <li>uwolnić się od trudnych emocji i traum</li>
+              <li>odkryć w sobie moc i nauczyć się korzystać z niej w życiu</li>
+              <li>zadbać o wewnętrzny spokój i poczucie bezpieczeństwa</li>
+              <li>odkryć własne powołanie i misję życiową</li>
+              <li>podnieść poczucie własnej wartości</li>
+              <li>zrozumieć konflikty wewnętrzne oraz interpersonalne</li>
+              <li>połączyć się z własną intuicją</li>
+              <li>odzyskać radość i swobodę w życiu</li>
+              <li>uzyskać harmonię we wszystkich obszarach życia</li>
+            </ul>
+
+            <h2 class="subpage-article__heading2">
+              <i class="fas fa-caret-right">&nbsp;&nbsp;</i>Narzędzia i sposoby
+              pracy
+            </h2>
+            <p>
+              Posiadam wieloletnie doświadczenie jako terapeutka i osoba
+              prowadząca grupy i warsztaty. Chociaż zdobywam wykształcenie
+              psychoterapeutyczne, w konkretnej modalności psychoterapii
+              pozytywnej, na moich sesjach łączę różne podejścia. Korzystam z
+              intuicji, dzięki której umiejętnie dobieram różne narzędzia pracy
+              rozwojowej dostosowane do potrzeb moich klientów. Stosuję
+              ustawienia systemowe, pracę z archetypami i etapami rozwoju
+              osobistego. Korzystam z archetypowej podróży bohatera i podróży
+              bohaterki (jako odzwierciedlenie rozwoju osobistego/indywiduacji),
+              dialogów wewnętrznych (z aspektami postaci wewnętrznych – w
+              szczególności z wewnętrznym dzieckiem i wewnętrznym krytykiem),
+              spontanicznego ruchu, twórczości, medytacji i świadomego oddechu.
+              Ze mą z pewnością będziesz pracować poprzez ciało i emocje.
+              Terapia ma charakter krótkoterminowy, spotkania trwają z reguły od
+              trzech do dwunastu miesięcy. Więcej o mnie możesz przeczytać
+              tutaj:
+              <a href="https://www.herosteps.eu/o_nas/">www.herosteps.eu</a>
+            </p>
+
+            <h2 class="subpage-article__heading2">
+              <i class="fas fa-caret-right">&nbsp;&nbsp;</i>Wykształcenie
+            </h2>
+            <p>
+              Ukończyłam Szkołę Coachów Stowarzyszenia CEL, Szkołę Terapii
+              Ustawień Systemowych w Polu Archetypów Anny Rataj i Szkołę
+              Facylitatorów Horse Assisted Education Agaty Wiatrowskiej. Jestem
+              certyfikowanym coachem, terapeutką i facylitatorką HAE- programów
+              rozwojowych z udziałem koni trenerów. Jestem w trakcie
+              czteroletniego szkolenia psychoterapeutycznego z transkulturowej
+              psychoterapii pozytywnej. Kurs zorganizowany jest przez Wrocławski
+              Instytut Psychoterapii przy współpracy z Akademią Psychoterapii w
+              Wiesbaden (Niemcy), pod patronatem Światowego Towarzystwa
+              Psychoterapii Pozytywnej. Jestem absolwentką filologii angielskiej
+              i zarządzania przedsiębiorstwem.
+            </p>
 
             <div class="emptyspace20 off-on-mob"></div>
+            <h2 class="subpage-article__heading2">
+              <i class="fas fa-caret-right">&nbsp;&nbsp;</i>Gdzie się spotkamy?
+            </h2>
+            <p>
+              Sesje odbywają się w Domu Pod Wierzbą (ul. Główna 34, 55-220
+              Brzezinki), we Wrocławiu przy ul. Hallera 3/4 lub
+              <em>online</em> przez Zoom, Skype lub inne komunikatory
+            </p>
 
             <div class="subpage-article__contact-card">
-              <p>Skontaktuj się ze mną</p>
+              <p>Skontaktuj się ze mną:</p>
               <p>
                 <a
                   class="contact__link--alt"
