section footer created

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                     >
                   </li>
                   <li class="navigation__listitem--drop">
-                    <a class="navigation__link--drop" href="terapia-holistyczna.html"
+                    <a
+                      class="navigation__link--drop"
+                      href="terapia-holistyczna.html"
                       >Terapia holistyczna</a
                     >
                   </li>
@@ -71,7 +73,7 @@
                 </div>
               </ul>
             </li>
-            <li><a class="navigation__link" href="#contact">Kontakt</a></li>
+            <li><a class="navigation__link" href="kontakt.html">Kontakt</a></li>
             <li>
               <a
                 class="navigation__link navigation__link--discreet"
@@ -92,6 +94,36 @@
           </header>
 
           <!-- <img src="images/slide-03.jpg" alt="Domu pod Wierzbą" /> -->
+        </section>
+
+        <section class="fund-info">
+          <h2 class="fund-info__heading">
+            <img
+              class="fund-info__image"
+              src="images/logotypy-UE-finansowanie.jpg"
+              alt="Finansowanie projektu"
+            />
+          </h2>
+          <p class="fund-info__text">
+            Europejski Fundusz Rolny na rzecz Rozwoju Obszarów Wiejskich: Europa
+            inwestująca w obszary wiejskie
+          </p>
+
+          <p class="fund-info__text">
+            Operacja pn. "Dom pod Wierzbą - wypoczynek z Nordic Walking i
+            Fizjoterapią" mająca na celu utworzenie działalności gospodarczej na
+            obszarze Dolnej Widawy i stworzenie jednego miejsca pracy
+            współfinansowana jest ze środków Unii Europejskiej w ramach
+            działania „Wsparcie dla rozwoju lokalnego w ramach inicjatywy
+            LEADER” Programu Rozwoju Obszarów Wiejskich na lata 2014-2020.
+          </p>
+
+          <p class="fund-info__text">
+            Informacje o LGD Dobra Widawa:
+            <a href="http://www.dobrawidawa.pl" target="_blank"
+              >www.dobrawidawa.pl</a
+            >
+          </p>
         </section>
 
         <section class="offer">
@@ -234,7 +266,9 @@
               zjeść naleśniki z czarnego bzu i kanie rosnące za domem.
             </p>
 
-            <div class="grid-4-col">
+            <div class="emptyspace20 off-on-mob"></div>
+
+            <div class="about-article__mini-gallery">
               <img
                 class="about-article__image"
                 src="images/about-gallery-img-sala-warsztatowa-thumb.jpg"
@@ -250,12 +284,14 @@
                 src="images/about-gallery-img-wieczor-chmury-thumb.jpg"
                 alt="Widok z Domu Pod Wierzbą"
               />
-              <img
+              <!--  <img
                 class="about-article__image"
                 src="images/about-gallery-img-wiosna-thumb.jpg"
                 alt="Widok z Domu Pod Wierzbą"
-              />
+              /> -->
             </div>
+
+            <div class="emptyspace20 off-on-mob"></div>
 
             <p class="about-article__text">
               Nasze miejsce to baza na szkolenia, warsztaty, coaching, terapię
@@ -271,10 +307,16 @@
         </section>
 
         <section class="testimonials">
-          <img
-            src="images/testimonials-na-glownej-background.jpg"
-            alt="opinie klientów"
-          />
+          <div class="testimonials__container">
+            <p class="testimonials__icon"><i class="fas fa-quote-left"></i></p>
+            <p class="testimonials__text">
+              To piękne miejsce, w którym zawsze wypoczywam. Bogata oferta
+              warsztatów, bo niemal w każdy weekend dzieje się coś ciekawego. No
+              i gospodarze, Asia i Paweł, wspaniali ludzie, których warto
+              poznać.
+            </p>
+            <p class="testimonials__signature">~ Michał</p>
+          </div>
         </section>
 
         <section class="contact">
@@ -282,7 +324,7 @@
             <h2 class="contact__heading">Kontakt i dojazd</h2>
           </header>
 
-          <div class="contact__info">
+          <div class="contact__info grid-2-col">
             <div class="contact__col1">
               <img
                 class="contact__image"
@@ -299,19 +341,15 @@
               </p>
               <p>
                 <a class="contact__link" href="mailto:joanna@dompodwierzba.pl"
+                  ><i class="far fa-envelope">&nbsp;&nbsp;</i
                   >joanna@dompodwierzba.pl</a
                 >
               </p>
               <p>
-                <a
-                  class="contact__link contact__link--expose"
-                  href="tel:+48730700277"
-                  >+48 730 700 277</a
+                <a class="contact__link" href="tel:+48730700277"
+                  ><i class="fas fa-phone-alt">&nbsp;</i>+48 730700277</a
                 >
               </p>
-            </div>
-
-            <div class="contact__col3">
               <button class="contact__button">więcej informacji</button>
             </div>
           </div>
@@ -329,40 +367,76 @@
             ></iframe>
           </div>
         </section>
-
-        <section class="fund-info">
-          <h2 class="fund-info__heading">
-            <img
-              class="fund-info__image"
-              src="images/logotypy-UE-finansowanie.jpg"
-              alt="Finansowanie projektu"
-            />
-          </h2>
-          <p class="fund-info__text">
-            Europejski Fundusz Rolny na rzecz Rozwoju Obszarów Wiejskich: Europa
-            inwestująca w obszary wiejskie
-          </p>
-
-          <p class="fund-info__text">
-            Operacja pn. "Dom pod Wierzbą - wypoczynek z Nordic Walking i
-            Fizjoterapią" mająca na celu utworzenie działalności gospodarczej na
-            obszarze Dolnej Widawy i stworzenie jednego miejsca pracy
-            współfinansowana jest ze środków Unii Europejskiej w ramach
-            działania „Wsparcie dla rozwoju lokalnego w ramach inicjatywy
-            LEADER” Programu Rozwoju Obszarów Wiejskich na lata 2014-2020.
-          </p>
-
-          <p class="fund-info__text">
-            Informacje o LGD Dobra Widawa:
-            <a href="http://www.dobrawidawa.pl" target="_blank"
-              >www.dobrawidawa.pl</a
-            >
-          </p>
-        </section>
       </section>
 
       <footer class="footer">
-        <p class="footer__text">copyright 2020 Dom Pod Wierzbą</p>
+        <div class="footer__4-col">
+          <section class="footer__section">
+            <img
+              class="site-header__logo-img"
+              src="images/logo-dom-pod-wierzba-coffee.png"
+              alt="pod pod wierzbą logotyp"
+            />
+          </section>
+
+          <section class="footer__section">
+            <ul class="footer__menu-links-ul">
+              <li>
+                <a class="footer__menu-links-a" href="index.html"
+                  >Strona główna</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="nordic-walking.html"
+                  >Wypoczynek z Nordic Walking</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="terapia-holistyczna.html"
+                  >Terapia holistyczna</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="akupunktura.html"
+                  >Akupunktura</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="warsztaty.html"
+                  >Warsztaty</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="kontakt.html">Kontakt</a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer__section">
+            <p class="footer__contact__text">
+              DOM POD WIERZBĄ<br />
+              ul. Główna 34 Brzezinki<br />
+              55-220 Jelcz-Laskowice
+            </p>
+            <p>&nbsp;</p>
+            <p>
+              <a
+                class="footer__contact-link"
+                href="mailto:joanna@dompodwierzba.pl"
+                ><i class="far fa-envelope">&nbsp;&nbsp;</i
+                >joanna@dompodwierzba.pl</a
+              >
+            </p>
+            <p>
+              <a class="footer__contact-link" href="tel:+48730700277"
+                ><i class="fas fa-phone-alt">&nbsp;</i>+48 730700277</a
+              >
+            </p>
+          </section>
+          <section class="footer__section">
+            <p class="footer__social"><i class="fab fa-facebook-f"></i></p>
+          </section>
+        </div>
+        <p class="footer__text">2020 © Dom Pod Wierzbą</p>
       </footer>
     </main>
 
