--- a/terapia-holistyczna.html
+++ b/terapia-holistyczna.html
@@ -76,7 +76,7 @@
                 </div>
               </ul>
             </li>
-            <li><a class="navigation__link" href="#contact">Kontakt</a></li>
+            <li><a class="navigation__link" href="kontakt.html">Kontakt</a></li>
             <li>
               <a
                 class="navigation__link navigation__link--discreet"
@@ -237,8 +237,73 @@
       </section>
 
       <footer class="footer">
-        <p class="footer__text">copyright 2020 Dom Pod Wierzbą</p>
-      </footer>
+        <div class="footer__4-col">
+          <section class="footer__section">
+            <img
+              class="site-header__logo-img"
+              src="images/logo-dom-pod-wierzba-coffee.png"
+              alt="pod pod wierzbą logotyp"
+            />
+          </section>
+
+          <section class="footer__section">
+            <ul class="footer__menu-links-ul">
+              <li>
+                <a class="footer__menu-links-a" href="index.html"
+                  >Strona główna</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="nordic-walking.html"
+                  >Wypoczynek z Nordic Walking</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="terapia-holistyczna.html"
+                  >Terapia holistyczna</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="akupunktura.html"
+                  >Akupunktura</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="warsztaty.html"
+                  >Warsztaty</a
+                >
+              </li>
+              <li>
+                <a class="footer__menu-links-a" href="kontakt.html">Kontakt</a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer__section">
+            <p class="footer__contact__text">
+              DOM POD WIERZBĄ<br />
+              ul. Główna 34 Brzezinki<br />
+              55-220 Jelcz-Laskowice
+            </p>
+            <p>&nbsp;</p>
+            <p>
+              <a
+                class="footer__contact-link"
+                href="mailto:joanna@dompodwierzba.pl"
+                ><i class="far fa-envelope">&nbsp;&nbsp;</i
+                >joanna@dompodwierzba.pl</a
+              >
+            </p>
+            <p>
+              <a class="footer__contact-link" href="tel:+48730700277"
+                ><i class="fas fa-phone-alt">&nbsp;</i>+48 730700277</a
+              >
+            </p>
+          </section>
+          <section class="footer__section">
+            <p class="footer__social"><i class="fab fa-facebook-f"></i></p>
+          </section>
+        </div>
+        <p class="footer__text">2020 © Dom Pod Wierzbą</p>
     </main>
 
     <script src="scripts/main.js"></script>
