main menu rebuild (for mobile)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         >
       </header>
 
-      <header class="site-header brown">
+      <header class="site-header palegreen">
         <div class="site-header__logo">
           <a href="index.html">
             <img
@@ -38,45 +38,46 @@
             />
           </a>
         </div>
-        <button class="hamburger hamburger--js" aria-label="otwórz menu">
+        <!-- <button class="hamburger hamburger--js" aria-label="otwórz menu">
           MENU
-        </button>
-        <nav class="navigation navigation--js">
-          <ul id="main-menu-ul">
-            <li><a class="navigation__link" href="index.html">Home</a></li>
-            <li>
-              <a class="navigation__link" href="#offer">Oferta</a>
-              <ul class="main-menu-drop">
-                <div>
-                  <li class="navigation__listitem--drop">
-                    <a class="navigation__link--drop" href="nordic-walking.html"
-                      >Wypoczynek z Nordic Walking</a
-                    >
-                  </li>
-                  <li class="navigation__listitem--drop">
-                    <a
-                      class="navigation__link--drop"
-                      href="terapia-holistyczna.html"
-                      >Terapia holistyczna</a
-                    >
-                  </li>
-                  <li class="navigation__listitem--drop">
-                    <a class="navigation__link--drop" href="akupunktura.html"
-                      >Akupunktura</a
-                    >
-                  </li>
-                  <li class="navigation__listitem--drop">
-                    <a class="navigation__link--drop" href="warsztaty.html"
-                      >Warsztaty</a
-                    >
-                  </li>
-                </div>
+        </button> -->
+
+        <nav class="mainmenu navigation--js">
+          <input class="menu-btn" type="checkbox" id="menu-btn" />
+          <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+          <ul class="mainmenu-ul">
+            <li><a class="mainmenu__link" href="index.html">Home</a></li>
+           <li>
+              <a class="mainmenu__link" href="#offer">Oferta</a>
+              <ul class="mainmenu__dropdown-ul">
+                <li class="mainmenu__listitem--drop">
+                  <a class="mainmenu__link--drop" href="nordic-walking.html"
+                    >Wypoczynek z Nordic Walking</a
+                  >
+                </li>
+                <li class="mainmenu__listitem--drop">
+                  <a
+                    class="mainmenu__link--drop"
+                    href="terapia-holistyczna.html"
+                    >Terapia holistyczna</a
+                  >
+                </li>
+                <li class="mainmenu__listitem--drop">
+                  <a class="mainmenu__link--drop" href="akupunktura.html"
+                    >Akupunktura</a
+                  >
+                </li>
+                <li class="mainmenu__listitem--drop">
+                  <a class="mainmenu__link--drop" href="warsztaty.html"
+                    >Warsztaty</a
+                  >
+                </li>
               </ul>
             </li>
-            <li><a class="navigation__link" href="kontakt.html">Kontakt</a></li>
+            <li><a class="mainmenu__link" href="kontakt.html">Kontakt</a></li>
             <li>
               <a
-                class="navigation__link navigation__link--discreet"
+                class="mainmenu__link mainmenu__link--discreet"
                 href="lgd-dobra-widawa.html"
                 >LGD Dobra Widawa</a
               >
@@ -84,6 +85,50 @@
             <!-- <div id="main-menu-marker"></div> -->
           </ul>
         </nav>
+
+        <!-- <nav class="mainmenu mainmenu--js">
+          <ul id="main-menu-ul">
+            <li><a class="mainmenu__link" href="index.html">Home</a></li>
+            <li>
+              <a class="mainmenu__link" href="#offer">Oferta</a>
+              <ul class="main-menu-drop">
+                <div>
+                  <li class="mainmenu__listitem--drop">
+                    <a class="mainmenu__link--drop" href="nordic-walking.html"
+                      >Wypoczynek z Nordic Walking</a
+                    >
+                  </li>
+                  <li class="mainmenu__listitem--drop">
+                    <a
+                      class="mainmenu__link--drop"
+                      href="terapia-holistyczna.html"
+                      >Terapia holistyczna</a
+                    >
+                  </li>
+                  <li class="mainmenu__listitem--drop">
+                    <a class="mainmenu__link--drop" href="akupunktura.html"
+                      >Akupunktura</a
+                    >
+                  </li>
+                  <li class="mainmenu__listitem--drop">
+                    <a class="mainmenu__link--drop" href="warsztaty.html"
+                      >Warsztaty</a
+                    >
+                  </li>
+                </div>
+              </ul>
+            </li>
+            <li><a class="mainmenu__link" href="kontakt.html">Kontakt</a></li>
+            <li>
+              <a
+                class="mainmenu__link mainmenu__link--discreet"
+                href="lgd-dobra-widawa.html"
+                >LGD Dobra Widawa</a
+              >
+            </li>
+            
+          </ul>
+        </nav> -->
       </header>
 
       <section class="site-content">
